# backgammon

./: README.md  pyproject.toml
src/backgammon/: pgz_backgammon.py
